fixing overflow roblem

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -36,6 +36,7 @@ html {
   margin: 0;
   width: 100%;
   height: 100%;
+  // overflow: hidden;
 }
 body {
   padding: 0;
@@ -44,7 +45,6 @@ body {
   height: 100vh;
   width: 100%;
   font-size: 1.6rem;
-  overflow: hidden;
 }
 ul {
   list-style: none;
